@@ -1,3 +1,8 @@
+Tue Jul 28 09:43:27 1998  Jeffrey A Law  (law@cygnus.com)
+
+	* sysdep-hpux11.h: New file.
+	* configure.in (*-*-*-hpux11*): Use sysdep-hpux11.h.
+
 Thu Jul 23 17:48:21 1998  Ian Lance Taylor  <ian@cygnus.com>
 
 	* configure.bat: Remove obsolete file.
